--- a/projects/web/src/app/admin/organize-units/detail/detail.component.html
+++ b/projects/web/src/app/admin/organize-units/detail/detail.component.html
@@ -1,5 +1,5 @@
 ﻿@let user = account.current();
-<nz-card class="ant-card-data-detail m-0"
+<nz-card class="ant-card-data-detail"
   [nzTitle]="title" [nzExtra]="toolsTpl" [nzActions]="params.editable ? [okTpl, cancelTpl] : []">
   <ng-template #toolsTpl>
     <nz-space-compact nzSize="small">
