--- a/projects/web/src/app/admin/roles/privilege/privilege.component.html
+++ b/projects/web/src/app/admin/roles/privilege/privilege.component.html
@@ -1,4 +1,4 @@
-<nz-card class="ant-card-data-detail m-0"
+<nz-card class="ant-card-data-detail"
   [nzTitle]="params.title" [nzExtra]="toolsTpl">
   <ng-template #toolsTpl>
     <nz-space-compact nzSize="small">
