--- a/projects/web/src/app/admin/users/password/password.component.html
+++ b/projects/web/src/app/admin/users/password/password.component.html
@@ -1,5 +1,5 @@
 @let user = account.current();
-<nz-card class="ant-card-data-detail m-0" [nzTitle]="title" [nzExtra]="toolsTpl">
+<nz-card class="ant-card-data-detail" [nzTitle]="title" [nzExtra]="toolsTpl">
   <ng-template #toolsTpl>
     <nz-space-compact nzSize="small">
       @if (user.privileges['app_users.reset_pass'] && params.editable) {
