--- a/projects/web/src/app/account/token-list/token-list.component.html
+++ b/projects/web/src/app/account/token-list/token-list.component.html
@@ -46,7 +46,7 @@
         [nzPageSizeOptions]="vm.pageSizeOptions()"
         (nzQueryParams)="loadData($event)">
         <thead>
-        <tr class="sticky-top">
+        <tr class="sticky top-0 bg-gray-200 z-20">
           <th scope="col" class="text-end">#</th>
           <th scope="col" class="text-start">名称</th>
           <th scope="col" class="text-center">凭证值</th>
