--- a/projects/web/src/app/admin/roles/list/list.component.html
+++ b/projects/web/src/app/admin/roles/list/list.component.html
@@ -1,92 +1,90 @@
 @let user = account.current();
-<div class="w-full px-3">
-  <nz-card class="ant-card-data-list" nzTitle="角色" [nzExtra]="cardExtra">
-    <ng-template #cardExtra>
-      <nz-space-compact>
-        @if (user.privileges['app_roles.create']) {
-          <button type="button" nz-button nzType="primary"
-            (click)="showDetail('0', true)">
-            <nz-icon nzType="plus" /> 新建角色
-          </button>
-        }
-        <button type="button" nz-button nzType="default"
-          (click)="vm.search()">
-          <nz-icon nzType="sync" /> 刷新
+<nz-card class="ant-card-data-list" nzTitle="角色" [nzExtra]="cardExtra">
+  <ng-template #cardExtra>
+    <nz-space-compact>
+      @if (user.privileges['app_roles.create']) {
+        <button type="button" nz-button nzType="primary"
+          (click)="showDetail('0', true)">
+          <nz-icon nzType="plus" /> 新建角色
         </button>
-      </nz-space-compact>
-    </ng-template>
-    @let data = (vm.data | async)!;
-    <nz-table nzSize="small" [nzFrontPagination]="false"
-      [nzShowSizeChanger]="true"
-      [nzShowPagination]="true"
-      [nzShowQuickJumper]="true"
-      [nzData]="data"
-      [nzTotal]="(vm.total | async)!"
-      [nzShowTotal]="totalTpl"
-      [nzLoading]="vm.loading"
-      [nzPageIndex]="vm.pageIndex"
-      [nzPageSize]="vm.pageSize"
-      [nzPageSizeOptions]="vm.pageSizeOptions"
-      (nzQueryParams)="loadData($event)">
-      <thead>
-        <tr class="sticky-top">
-          <th scope="col" class="text-end text-nowrap table-row-num-col">#</th>
-          <th scope="col" class="text-start text-nowrap">名称</th>
-          <th scope="col" class="text-start text-nowrap">描述</th>
-          <th scope="col" class="text-center text-nowrap">是否默认</th>
-          <th scope="col" class="text-center text-nowrap">是否匿名</th>
-          <th scope="col" class="text-end text-nowrap">用户数</th>
-          <th scope="col" class="text-center text-nowrap table-action-col-4">操作</th>
-        </tr>
-      </thead>
-      <tbody>
-        @for (item of data; track item.id; let i = $index;) {
-          <tr>
-            <th scope="row" class="text-end">{{i+1+vm.searchModel.skip}}</th>
-            <td class="text-start">{{item.name}}</td>
-            <td class="text-start">{{item.description}}</td>
-            <td class="text-center">{{item.isDefault ? '是' : '否'}}</td>
-            <td class="text-center">{{item.isAnonymous ? '是' : '否'}}</td>
-            <td class="text-end"><a [routerLink]="['../users', {roleName: item.name}]">{{item.userCount}}</a></td>
-            <td class="text-center">
-              <nz-space-compact nzSize="small">
-                @if (user.privileges['app_roles.read_by_id']) {
-                  <button type="button" nz-button
-                    nz-tooltip="详情" nzTooltipPlacement="top"
-                    (click)="showDetail(item.id, false)">
-                    <nz-icon nzType="bi:info-square" />
-                  </button>
-                }
-                @if (user.privileges['app_roles.update']) {
-                  <button type="button" nz-button
-                    nz-tooltip="编辑" nzTooltipPlacement="top"
-                    (click)="showDetail(item.id, true)">
-                    <nz-icon nzType="bi:pencil-square" />
-                  </button>
-                }
-                @if (user.privileges['app_roles.read_role_privileges']) {
-                  <button type="button" nz-button
-                    nz-tooltip="角色权限" nzTooltipPlacement="top"
-                    (click)="showPrivileges(item)">
-                    <nz-icon nzType="bi:shield-lock" />
-                  </button>
-                }
-                @if (user.privileges['app_roles.delete']) {
-                  <button type="button" nz-button nzType="default"
-                    nz-tooltip="删除" nzTooltipPlacement="top"
-                    (click)="delete(item.id)"
-                    [disabled]="$any(item.userCount) > 0">
-                    <nz-icon nzType="bi:trash" />
-                  </button>
-                }
-              </nz-space-compact>
-            </td>
-          </tr>
-        }
-      </tbody>
-    </nz-table>
-  </nz-card>
-  <ng-template #totalTpl let-total let-range="range">
-    当前显示 {{total}} 条记录中的第 {{range[0]}} 至 {{range[1]}} 条
+      }
+      <button type="button" nz-button nzType="default"
+        (click)="vm.search()">
+        <nz-icon nzType="sync" /> 刷新
+      </button>
+    </nz-space-compact>
   </ng-template>
-</div>
+  @let data = (vm.data | async)!;
+  <nz-table nzSize="small" [nzFrontPagination]="false"
+    [nzShowSizeChanger]="true"
+    [nzShowPagination]="true"
+    [nzShowQuickJumper]="true"
+    [nzData]="data"
+    [nzTotal]="(vm.total | async)!"
+    [nzShowTotal]="totalTpl"
+    [nzLoading]="vm.loading"
+    [nzPageIndex]="vm.pageIndex"
+    [nzPageSize]="vm.pageSize"
+    [nzPageSizeOptions]="vm.pageSizeOptions"
+    (nzQueryParams)="loadData($event)">
+    <thead>
+      <tr class="sticky top-0 bg-gray-200 z-20">
+        <th scope="col" class="text-end text-nowrap table-row-num-col">#</th>
+        <th scope="col" class="text-start text-nowrap">名称</th>
+        <th scope="col" class="text-start text-nowrap">描述</th>
+        <th scope="col" class="text-center text-nowrap">是否默认</th>
+        <th scope="col" class="text-center text-nowrap">是否匿名</th>
+        <th scope="col" class="text-end text-nowrap">用户数</th>
+        <th scope="col" class="text-center text-nowrap table-action-col-4">操作</th>
+      </tr>
+    </thead>
+    <tbody>
+      @for (item of data; track item.id; let i = $index;) {
+        <tr>
+          <th scope="row" class="text-end">{{i+1+vm.searchModel.skip}}</th>
+          <td class="text-start">{{item.name}}</td>
+          <td class="text-start">{{item.description}}</td>
+          <td class="text-center">{{item.isDefault ? '是' : '否'}}</td>
+          <td class="text-center">{{item.isAnonymous ? '是' : '否'}}</td>
+          <td class="text-end"><a [routerLink]="['../users', {roleName: item.name}]">{{item.userCount}}</a></td>
+          <td class="text-center">
+            <nz-space-compact nzSize="small">
+              @if (user.privileges['app_roles.read_by_id']) {
+                <button type="button" nz-button
+                  nz-tooltip="详情" nzTooltipPlacement="top"
+                  (click)="showDetail(item.id, false)">
+                  <nz-icon nzType="bi:info-square" />
+                </button>
+              }
+              @if (user.privileges['app_roles.update']) {
+                <button type="button" nz-button
+                  nz-tooltip="编辑" nzTooltipPlacement="top"
+                  (click)="showDetail(item.id, true)">
+                  <nz-icon nzType="bi:pencil-square" />
+                </button>
+              }
+              @if (user.privileges['app_roles.read_role_privileges']) {
+                <button type="button" nz-button
+                  nz-tooltip="角色权限" nzTooltipPlacement="top"
+                  (click)="showPrivileges(item)">
+                  <nz-icon nzType="bi:shield-lock" />
+                </button>
+              }
+              @if (user.privileges['app_roles.delete']) {
+                <button type="button" nz-button nzType="default"
+                  nz-tooltip="删除" nzTooltipPlacement="top"
+                  (click)="delete(item.id)"
+                  [disabled]="$any(item.userCount) > 0">
+                  <nz-icon nzType="bi:trash" />
+                </button>
+              }
+            </nz-space-compact>
+          </td>
+        </tr>
+      }
+    </tbody>
+  </nz-table>
+</nz-card>
+<ng-template #totalTpl let-total let-range="range">
+  当前显示 {{total}} 条记录中的第 {{range[0]}} 至 {{range[1]}} 条
+</ng-template>
