--- a/projects/web/src/app/admin/users/list/list.component.html
+++ b/projects/web/src/app/admin/users/list/list.component.html
@@ -1,180 +1,178 @@
 @let info = account.current();
-<div class="w-full px-3">
-  <div class="flex gap-3">
-    <div class="w-1/6">
-      <nz-card nzTitle="组织单元" [nzExtra]="orgUnitExtraTpl" [nzBodyStyle]="{ padding: '0.25rem' }">
-        <ng-template #orgUnitExtraTpl>
-          <button type="button" nz-button nzType="default" (click)="loadOrganizeUnit()">
-            <nz-icon nzType="sync" />
-          </button>
-        </ng-template>
-        @if (organizeUnitSvc.treeNodes | async; as treeNodes) {
-          <nz-tree class="organize-unit-tree" [nzData]="treeNodes" (nzClick)="onOrganizeUnitClick($event)"></nz-tree>
-        }
-      </nz-card>
-    </div>
-    <div class="grow">
-      <nz-card class="ant-card-data-list" nzTitle="用户" [nzExtra]="cardExtraTpl">
-        <ng-template #cardExtraTpl>
-          <form nz-form>
-            <nz-space>
-              <nz-input-group *nzSpaceItem nzSearch [nzAddOnAfter]="userNameAddOnTpl">
-                <input name="userName" type="text" nz-input
-                  placeholder="按用户名搜索"
-                  [(ngModel)]="vm.searchModel.userName"
-                  (keyup.enter)="loadData({})"
-                />
-                <ng-template #userNameAddOnTpl>
-                  @if (vm.searchModel.userName) {
-                    <button class="px-2" type="button" nz-button nzType="default"
-                      (click)="cleanUserSearch()">
-                      <nz-icon nzType="close" />
-                    </button>
-                  }
-                  <button class="px-2" type="button" nz-button nzType="default" nzSearch (click)="vm.search()">
-                    <nz-icon nzType="search" />
-                  </button>
-                </ng-template>
-              </nz-input-group>
-              <nz-select *nzSpaceItem name="roleName" style="width: 160px;"
-                [(ngModel)]="vm.searchModel.roleName" (ngModelChange)="research()">
-                <nz-option nzValue="" nzLabel="全部用户"></nz-option>
-                @for (r of vm.roles | async; track r.name) {
-                  <nz-option [nzValue]="r.name"
-                    [nzLabel]="r.description || r.name + '(' + r.userCount + ')'">
-                  </nz-option>
-                }
-              </nz-select>
-              <nz-select *nzSpaceItem name="sortBy" [(ngModel)]="vm.searchModel.sortBy"
-                (ngModelChange)="loadData({})">
-                @for (sm of vm.sortMethods; track sm.value) {
-                  <nz-option [nzValue]="sm.value" [nzLabel]="sm.text">
-                  </nz-option>
-                }
-              </nz-select>
-              <nz-space-compact *nzSpaceItem>
-                @if (info.privileges['app_users.create']) {
-                  <button type="button" nz-button nzType="primary"
-                    (click)="showDetail('0', true)">
-                    <nz-icon class="me-1" nzType="plus" /> 新建用户
-                  </button>
-                }
-                <button type="button" nz-button nzType="default" (click)="loadData({})">
-                  <nz-icon class="me-1" nzType="sync" /> 刷新
-                </button>
-              </nz-space-compact>
-            </nz-space>
-          </form>
-        </ng-template>
-        @let data = (vm.data | async)!;
-        <nz-table nzSize="small" [nzFrontPagination]="false"
-          [nzShowSizeChanger]="true"
-          [nzShowPagination]="true"
-          [nzShowQuickJumper]="true"
-          [nzData]="data"
-          [nzTotal]="(vm.total | async)!"
-          [nzShowTotal]="totalTpl"
-          [nzLoading]="vm.loading"
-          [nzPageIndex]="vm.pageIndex"
-          [nzPageSize]="vm.pageSize"
-          [nzPageSizeOptions]="vm.pageSizeOptions"
-          (nzQueryParams)="loadData($event)">
-          <thead>
-            <tr class="sticky-top">
-              <th scope="col" class="text-end table-row-num-col">#</th>
-              <th scope="col" class="text-start">组织单元</th>
-              <th scope="col" class="text-start">用户名</th>
-              <th scope="col" class="text-center">电话</th>
-              <th scope="col" class="text-center">创建时间</th>
-              <th scope="col" class="text-center">最近登录</th>
-              <th scope="col" class="text-end">登录次数</th>
-              <th scope="col" class="text-center text-nowrap table-action-col-2">操作</th>
-            </tr>
-          </thead>
-          <tbody>
-            @for (item of data; track item.id; let i = $index;) {
-            <tr>
-              <th scope="row" class="text-end">{{i + 1}}</th>
-              <td class="text-center">{{item.organizeUnit?.name}}</td>
-              <td class="text-start">
-                @if (isLockout(item)) {
-                  <span class="cursor-pointer" nz-tooltip="该用户已经被锁定！" nzTooltipPlacement="right">
-                    {{getFullname(item)}}
-                    <nz-icon class="text-red-500! cursor-pointer" nzType="bi:ban" />
-                  </span>
-                }
-                @else {
-                  {{getFullname(item)}}
-                }
-              </td>
-              <td class="text-center">{{item.phoneNumber}}</td>
-              <td class="text-center">{{item.createTime | date:'yyyy-MM-dd HH:mm:ss'}}</td>
-              <td class="text-center">{{item.lastLogin | date:'yyyy-MM-dd HH:mm:ss'}}</td>
-              <td class="text-end">{{item.loginCount}}</td>
-              <td class="text-center">
-                <nz-space-compact nzSize="small">
-                  @if (info.privileges['app_users.read_by_id']) {
-                    <button class="px-1" type="button" nz-button
-                      nz-tooltip="详情" nzTooltipPlacement="top"
-                      (click)="showDetail(item.id, false)">
-                      <nz-icon nzType="bi:info-square" />
-                    </button>
-                  }
-                  @if (canViewGears()) {
-                    <button class="px-1" type="button" nz-button
-                      nz-tooltip="更多操作" nzTooltipPlacement="top"
-                      nz-dropdown nzTrigger="click" [nzDropdownMenu]="userMenuTpl">
-                      <nz-icon nzType="bi:three-dots" />
-                    </button>
-                  }
-                  <nz-dropdown-menu #userMenuTpl="nzDropdownMenu">
-                    <div nz-menu>
-                      @if (info.privileges['app_users.update']) {
-                        <li nz-menu-item (click)="showDetail(item.id, true)">
-                          <nz-icon nzType="bi:pencil-square" /> 编辑
-                        </li>
-                      }
-                      @if (isLockout(item)) {
-                        @if (info.privileges['app_users.unlock']) {
-                            <li nz-menu-item (click)="vm.unlockUser(item.id)">
-                              <nz-icon nzType="bi:unlock" /> 解锁
-                          </li>
-                        }
-                      }
-                      @else {
-                        @if (info.privileges['app_users.lock']) {
-                          <li nz-menu-item (click)="showLock(item)">
-                            <nz-icon nzType="bi:lock" /> 锁定
-                          </li>
-                        }
-                      }
-                      @if (info.privileges['app_users.reset_pass']) {
-                        <li nz-menu-item (click)="showPassword(item)">
-                          <nz-icon nzType="bi:key" /> 重置密码
-                        </li>
-                      }
-                      @if (info.privileges['app_users.read_user_roles']) {
-                        <li nz-menu-item (click)="showRoles(item)">
-                          <nz-icon nzType="bi:shield-check" /> 角色
-                        </li>
-                      }
-                      @if (info.privileges['app_users.delete']) {
-                        <li nz-menu-item (click)="delete(item.id)">
-                          <nz-icon nzType="bi:trash" /> 删除
-                        </li>
-                      }
-                    </div>
-                  </nz-dropdown-menu>
-                </nz-space-compact>
-              </td>
-            </tr>
-          }
-          </tbody>
-        </nz-table>
-      </nz-card>
-      <ng-template #totalTpl let-total let-range="range">
-        当前显示 {{total}} 条记录中的第 {{range[0]}} 至 {{range[1]}} 条
+<div class="flex gap-3">
+  <div class="w-1/6">
+    <nz-card nzTitle="组织单元" [nzExtra]="orgUnitExtraTpl" [nzBodyStyle]="{ padding: '0.25rem' }">
+      <ng-template #orgUnitExtraTpl>
+        <button type="button" nz-button nzType="default" (click)="loadOrganizeUnit()">
+          <nz-icon nzType="sync" />
+        </button>
       </ng-template>
-    </div>
+      @if (organizeUnitSvc.treeNodes | async; as treeNodes) {
+        <nz-tree class="organize-unit-tree" [nzData]="treeNodes" (nzClick)="onOrganizeUnitClick($event)"></nz-tree>
+      }
+    </nz-card>
+  </div>
+  <div class="grow">
+    <nz-card class="ant-card-data-list" nzTitle="用户" [nzExtra]="cardExtraTpl">
+      <ng-template #cardExtraTpl>
+        <form nz-form>
+          <nz-space>
+            <nz-input-group *nzSpaceItem nzSearch [nzAddOnAfter]="userNameAddOnTpl">
+              <input name="userName" type="text" nz-input
+                placeholder="按用户名搜索"
+                [(ngModel)]="vm.searchModel.userName"
+                (keyup.enter)="loadData({})"
+              />
+              <ng-template #userNameAddOnTpl>
+                @if (vm.searchModel.userName) {
+                  <button class="px-2" type="button" nz-button nzType="default"
+                    (click)="cleanUserSearch()">
+                    <nz-icon nzType="close" />
+                  </button>
+                }
+                <button class="px-2" type="button" nz-button nzType="default" nzSearch (click)="vm.search()">
+                  <nz-icon nzType="search" />
+                </button>
+              </ng-template>
+            </nz-input-group>
+            <nz-select *nzSpaceItem name="roleName" style="width: 160px;"
+              [(ngModel)]="vm.searchModel.roleName" (ngModelChange)="research()">
+              <nz-option nzValue="" nzLabel="全部用户"></nz-option>
+              @for (r of vm.roles | async; track r.name) {
+                <nz-option [nzValue]="r.name"
+                  [nzLabel]="r.description || r.name + '(' + r.userCount + ')'">
+                </nz-option>
+              }
+            </nz-select>
+            <nz-select *nzSpaceItem name="sortBy" [(ngModel)]="vm.searchModel.sortBy"
+              (ngModelChange)="loadData({})">
+              @for (sm of vm.sortMethods; track sm.value) {
+                <nz-option [nzValue]="sm.value" [nzLabel]="sm.text">
+                </nz-option>
+              }
+            </nz-select>
+            <nz-space-compact *nzSpaceItem>
+              @if (info.privileges['app_users.create']) {
+                <button type="button" nz-button nzType="primary"
+                  (click)="showDetail('0', true)">
+                  <nz-icon class="me-1" nzType="plus" /> 新建用户
+                </button>
+              }
+              <button type="button" nz-button nzType="default" (click)="loadData({})">
+                <nz-icon class="me-1" nzType="sync" /> 刷新
+              </button>
+            </nz-space-compact>
+          </nz-space>
+        </form>
+      </ng-template>
+      @let data = (vm.data | async)!;
+      <nz-table nzSize="small" [nzFrontPagination]="false"
+        [nzShowSizeChanger]="true"
+        [nzShowPagination]="true"
+        [nzShowQuickJumper]="true"
+        [nzData]="data"
+        [nzTotal]="(vm.total | async)!"
+        [nzShowTotal]="totalTpl"
+        [nzLoading]="vm.loading"
+        [nzPageIndex]="vm.pageIndex"
+        [nzPageSize]="vm.pageSize"
+        [nzPageSizeOptions]="vm.pageSizeOptions"
+        (nzQueryParams)="loadData($event)">
+        <thead>
+          <tr class="sticky top-0 bg-gray-200 z-20">
+            <th scope="col" class="text-end table-row-num-col">#</th>
+            <th scope="col" class="text-start">组织单元</th>
+            <th scope="col" class="text-start">用户名</th>
+            <th scope="col" class="text-center">电话</th>
+            <th scope="col" class="text-center">创建时间</th>
+            <th scope="col" class="text-center">最近登录</th>
+            <th scope="col" class="text-end">登录次数</th>
+            <th scope="col" class="text-center text-nowrap table-action-col-2">操作</th>
+          </tr>
+        </thead>
+        <tbody>
+          @for (item of data; track item.id; let i = $index;) {
+          <tr>
+            <th scope="row" class="text-end">{{i + 1}}</th>
+            <td class="text-center">{{item.organizeUnit?.name}}</td>
+            <td class="text-start">
+              @if (isLockout(item)) {
+                <span class="cursor-pointer" nz-tooltip="该用户已经被锁定！" nzTooltipPlacement="right">
+                  {{getFullname(item)}}
+                  <nz-icon class="text-red-500! cursor-pointer" nzType="bi:ban" />
+                </span>
+              }
+              @else {
+                {{getFullname(item)}}
+              }
+            </td>
+            <td class="text-center">{{item.phoneNumber}}</td>
+            <td class="text-center">{{item.createTime | date:'yyyy-MM-dd HH:mm:ss'}}</td>
+            <td class="text-center">{{item.lastLogin | date:'yyyy-MM-dd HH:mm:ss'}}</td>
+            <td class="text-end">{{item.loginCount}}</td>
+            <td class="text-center">
+              <nz-space-compact nzSize="small">
+                @if (info.privileges['app_users.read_by_id']) {
+                  <button class="px-1" type="button" nz-button
+                    nz-tooltip="详情" nzTooltipPlacement="top"
+                    (click)="showDetail(item.id, false)">
+                    <nz-icon nzType="bi:info-square" />
+                  </button>
+                }
+                @if (canViewGears()) {
+                  <button class="px-1" type="button" nz-button
+                    nz-tooltip="更多操作" nzTooltipPlacement="top"
+                    nz-dropdown nzTrigger="click" [nzDropdownMenu]="userMenuTpl">
+                    <nz-icon nzType="bi:three-dots" />
+                  </button>
+                }
+                <nz-dropdown-menu #userMenuTpl="nzDropdownMenu">
+                  <div nz-menu>
+                    @if (info.privileges['app_users.update']) {
+                      <li nz-menu-item (click)="showDetail(item.id, true)">
+                        <nz-icon nzType="bi:pencil-square" /> 编辑
+                      </li>
+                    }
+                    @if (isLockout(item)) {
+                      @if (info.privileges['app_users.unlock']) {
+                          <li nz-menu-item (click)="vm.unlockUser(item.id)">
+                            <nz-icon nzType="bi:unlock" /> 解锁
+                        </li>
+                      }
+                    }
+                    @else {
+                      @if (info.privileges['app_users.lock']) {
+                        <li nz-menu-item (click)="showLock(item)">
+                          <nz-icon nzType="bi:lock" /> 锁定
+                        </li>
+                      }
+                    }
+                    @if (info.privileges['app_users.reset_pass']) {
+                      <li nz-menu-item (click)="showPassword(item)">
+                        <nz-icon nzType="bi:key" /> 重置密码
+                      </li>
+                    }
+                    @if (info.privileges['app_users.read_user_roles']) {
+                      <li nz-menu-item (click)="showRoles(item)">
+                        <nz-icon nzType="bi:shield-check" /> 角色
+                      </li>
+                    }
+                    @if (info.privileges['app_users.delete']) {
+                      <li nz-menu-item (click)="delete(item.id)">
+                        <nz-icon nzType="bi:trash" /> 删除
+                      </li>
+                    }
+                  </div>
+                </nz-dropdown-menu>
+              </nz-space-compact>
+            </td>
+          </tr>
+        }
+        </tbody>
+      </nz-table>
+    </nz-card>
+    <ng-template #totalTpl let-total let-range="range">
+      当前显示 {{total}} 条记录中的第 {{range[0]}} 至 {{range[1]}} 条
+    </ng-template>
   </div>
 </div>
