--- a/projects/web/src/app/app.component.html
+++ b/projects/web/src/app/app.component.html
@@ -14,7 +14,7 @@
         <app-header></app-header>
       </nz-header>
     }
-    <nz-content class="router-main grow">
+    <nz-content class="grow px-3">
       <router-outlet></router-outlet>
     </nz-content>
   </nz-layout>
