--- a/projects/web/src/app/account/user-info/user-info.component.html
+++ b/projects/web/src/app/account/user-info/user-info.component.html
@@ -1,12 +1,12 @@
 @let _user = user();
 <div class="container mt-3 mb-5">
-  <div class="row">
-    <div class="col-2 text-end">
+  <div class="flex gap-3">
+    <div class="flex-2 text-end">
       账户信息
     </div>
-    <form class="col-8" nz-form #detailForm="ngForm" nzLayout="vertical">
-      <div class="row">
-        <div class="col">
+    <form class="flex-8" nz-form #detailForm="ngForm" nzLayout="vertical">
+      <div class="flex gap-3">
+        <div class="flex-1">
           <nz-form-item>
             <nz-form-label nzFor="surname" [nzRequired]="true">姓氏</nz-form-label>
             <nz-form-control [nzHasFeedback]="true">
@@ -16,7 +16,7 @@
             </nz-form-control>
           </nz-form-item>
         </div>
-        <div class="col">
+        <div class="flex-1">
           <nz-form-item>
             <nz-form-label nzFor="givenName" [nzRequired]="true">名称</nz-form-label>
             <nz-form-control [nzHasFeedback]="true">
@@ -27,8 +27,8 @@
           </nz-form-item>
         </div>
       </div>
-      <div class="row">
-        <div class="col">
+      <div class="flex gap-3">
+        <div class="flex-1">
           <nz-form-item>
             <nz-form-label nzFor="email" [nzRequired]="true">电子邮箱</nz-form-label>
             <nz-form-control [nzHasFeedback]="true">
@@ -38,7 +38,7 @@
             </nz-form-control>
           </nz-form-item>
         </div>
-        <div class="col">
+        <div class="flex-1">
           <nz-form-item>
             <nz-form-label nzFor="phoneNumber" [nzRequired]="true">电话号码</nz-form-label>
             <nz-form-control [nzHasFeedback]="true">
@@ -50,8 +50,8 @@
         </div>
       </div>
       <hr />
-      <div class="row">
-        <div class="col">
+      <div class="flex gap-3">
+        <div class="flex-1">
           <nz-form-item>
             <nz-form-label nzFor="dateOfBirth">出生日期</nz-form-label>
             <nz-form-control>
@@ -59,7 +59,7 @@
             </nz-form-control>
           </nz-form-item>
         </div>
-        <div class="col">
+        <div class="flex-1">
           <nz-form-item>
             <nz-form-label nzFor="gender">性别</nz-form-label>
             <nz-form-control>
@@ -72,8 +72,8 @@
           </nz-form-item>
         </div>
       </div>
-      <div class="row">
-        <div class="col">
+      <div class="flex gap-3">
+        <div class="flex-1">
           <nz-form-item>
             <nz-form-label nzFor="streetAddress">地址</nz-form-label>
             <nz-form-control>
@@ -84,8 +84,8 @@
           </nz-form-item>
         </div>
       </div>
-      <div class="row">
-        <div class="col d-flex justify-content-end">
+      <div class="flex gap-3">
+        <div class="flex-1 flex justify-end">
           @if (loading()) {
             <div class="me-auto">
               <nz-icon nzType="sync" [nzSpin]="true" />
@@ -100,13 +100,13 @@
       </div>
     </form>
   </div>
-  <div class="row">
-    <div class="col-2 text-end p-3">
+  <div class="flex">
+    <div class="flex-2 text-end p-3">
       修改密码
     </div>
-    <form class="mt-3 col-8" [formGroup]="pwdForm" nz-form nzLayout="vertical">
-      <div class="row">
-        <div class="col">
+    <form class="flex-8 mt-3!" [formGroup]="pwdForm" nz-form nzLayout="vertical">
+      <div class="flex gap-3">
+        <div class="flex-1">
           <nz-form-item>
             <nz-form-label nzFor="currentPassword" [nzRequired]="true">当前密码</nz-form-label>
             <nz-form-control [nzHasFeedback]="true">
@@ -119,8 +119,8 @@
           </nz-form-item>
         </div>
       </div>
-      <div class="row">
-        <div class="col">
+      <div class="flex gap-3">
+        <div class="flex-1">
           <nz-form-item>
             <nz-form-label nzFor="newPassword" [nzRequired]="true">新密码</nz-form-label>
             <nz-form-control [nzHasFeedback]="true">
@@ -133,8 +133,8 @@
           </nz-form-item>
         </div>
       </div>
-      <div class="row">
-        <div class="col">
+      <div class="flex gap-3">
+        <div class="flex-1">
           <nz-form-item>
             <nz-form-label nzFor="confirmPassword" [nzRequired]="true">确认密码</nz-form-label>
             <nz-form-control [nzHasFeedback]="true">
@@ -147,8 +147,8 @@
           </nz-form-item>
         </div>
       </div>
-      <div class="row">
-        <div class="col d-flex justify-content-end">
+      <div class="flex gap-3">
+        <div class="flex-1 flex justify-end">
           @if (updatingPwd()) {
             <div class="me-auto">
               <nz-icon nzType="sync" [nzSpin]="true" />
