--- a/projects/handset/src/styles.css
+++ b/projects/handset/src/styles.css
@@ -1,40 +1,4 @@
-/* Styles for BootStrap Icons */
-.bi {
-  display: inline-block;
-  vertical-align: text-bottom;
-  width: 1rem;
-  height: 1rem;
-}
-
-.bi-xs { width: .75rem; height: .75rem; }
-
-.bi-sm { width: .875rem; height: .875rem; }
-
-.bi-lg { width: 1.25rem; height: 1.25rem; }
-
-.bi-xl { width: 1.33333rem; height: 1.33333rem; }
-
-.bi-xxl { width: 1.5rem; height: 1.5rem; }
-
-.bi-1x { width: 1rem; height: 1rem; }
-.bi-2x { width: 2rem; height: 2rem; }
-.bi-3x { width: 3rem; height: 3rem; }
-.bi-4x { width: 4rem; height: 4rem; }
-.bi-5x { width: 5rem; height: 5rem; }
-.bi-6x { width: 6rem; height: 6rem; }
-.bi-7x { width: 7rem; height: 7rem; }
-.bi-8x { width: 8rem; height: 8rem; }
-.bi-9x { width: 9rem; height: 9rem; }
-.bi-10x { width: 10rem; height: 10rem; }
-
-.bi-spin {
-  animation: bi-spin 2s linear infinite;
-}
-
-@keyframes bi-spin {
-  0% { transform: rotate(0deg); }
-  to { transform: rotate(1turn); }
-}
+@import "tailwindcss";
 
 html, body {
   width: 100%;
